--- a/php/src/application/views/scripts/static/home.phtml
+++ b/php/src/application/views/scripts/static/home.phtml
@@ -1,13 +1,20 @@
 <? 
 
-$news = simplexml_load_file('content/'.$this->xml->front->right->news.'.xml');
+    $this->includeCSS('home.css');
 
-$newsline = $news->date . ': ' . CutLongLine($news->description, 200);
+    // load News XML file, according to the link in home.xml
+    $news = Model_Article::createByLabel((string)$this->article->xml->front->right->news);
+
+    // build a news line
+    $newsline = $news->updated . ': ' . cutLongLine($news->description, 200);
+
+    // holder of data
+    $front = $this->article->xml->front;
 
 ?>
 
-<a href="<?=Site::BuildURL($this->xml->front->link)?>" title="<?=$this->escape($this->xml->front->hint)?>">
-    <img class="frontimg" src="<?=Site::BuildImage($this->xml->front->image)?>" 
+<a href="<?=$this->staticUrl($front->link)?>" title="<?=$this->escape($front->hint)?>">
+    <img class="frontimg" src="<?=$this->viewFile($front->image)?>" 
         alt="TechnoParkCorp.com is a Software Development General Contractor" />
 </a>
 
@@ -16,9 +23,9 @@ $newsline = $news->date . ': ' . CutLongLine($news->description, 200);
 <div class="home">
     <table class="headers">
         <tr>
-            <td><?=$this->escape($this->xml->front->left->title)?></td>
-            <td><?=$this->escape($this->xml->front->middle->title)?></td>
-            <td><?=$this->escape($this->xml->front->right->title)?></td>
+            <td><?=$this->escape($front->left->title)?></td>
+            <td><?=$this->escape($front->middle->title)?></td>
+            <td><?=$this->escape($front->right->title)?></td>
         </tr>
     </table>
     
@@ -27,15 +34,15 @@ $newsline = $news->date . ': ' . CutLongLine($news->description, 200);
     <table class="links">
         <tr>
             <td>
-                <a href="<?=Site::BuildURL($this->xml->front->left->item1->attributes()->name)?>"><?=$this->escape($this->xml->front->left->item1)?></a><br/>
-                <a href="<?=Site::BuildURL($this->xml->front->left->item2->attributes()->name)?>"><?=$this->escape($this->xml->front->left->item2)?></a><br/>
-                <a href="<?=Site::BuildURL($this->xml->front->left->item3->attributes()->name)?>"><?=$this->escape($this->xml->front->left->item3)?></a><br/>
+                <a href="<?=$this->staticUrl($front->left->item1->attributes()->name)?>"><?=$this->escape($front->left->item1)?></a><br/>
+                <a href="<?=$this->staticUrl($front->left->item2->attributes()->name)?>"><?=$this->escape($front->left->item2)?></a><br/>
+                <a href="<?=$this->staticUrl($front->left->item3->attributes()->name)?>"><?=$this->escape($front->left->item3)?></a><br/>
             </td><td>
-                <a href="<?=Site::BuildURL($this->xml->front->middle->item1->attributes()->name)?>"><?=$this->escape($this->xml->front->middle->item1)?></a><br/>
-                <a href="<?=Site::BuildURL($this->xml->front->middle->item2->attributes()->name)?>"><?=$this->escape($this->xml->front->middle->item2)?></a><br/>
-                <a href="<?=Site::BuildURL($this->xml->front->middle->item3->attributes()->name)?>"><?=$this->escape($this->xml->front->middle->item3)?></a><br/>
+                <a href="<?=$this->staticUrl($front->middle->item1->attributes()->name)?>"><?=$this->escape($front->middle->item1)?></a><br/>
+                <a href="<?=$this->staticUrl($front->middle->item2->attributes()->name)?>"><?=$this->escape($front->middle->item2)?></a><br/>
+                <a href="<?=$this->staticUrl($front->middle->item3->attributes()->name)?>"><?=$this->escape($front->middle->item3)?></a><br/>
             </td><td style='padding-right: 10px; width: 220px;'>
-                <a href="<?=Site::BuildURL($this->xml->front->right->news)?>"><?=$this->escape($newsline)?></a>
+                <a href="<?=$this->staticUrl($front->right->news)?>"><?=$this->escape($newsline)?></a>
             </td></tr>
     </table>
 </div>
