--- a/php/src/application/views/scripts/content/system/search.phtml
+++ b/php/src/application/views/scripts/content/system/search.phtml
@@ -1,32 +1,41 @@
 <?=$this->article->text?>
 
 <?
+
+    // search request
+    $keyword = Zend_Controller_Front::getInstance()->getRequest()->getPost('keyword');
+
     // new holder of pages found
-    $found = [];
+    $found = array();
 
     foreach ($this->navigation()->findAllBy('visible', true) as $page) {
 
         // load news article
         $article = Model_Article::createByLabel($page->path);
             
-        // save article for future use
-        $page->article = $article;
-
-        // backward chronological order
-        $page->order = 1-strtotime($article->published);
+        // how relevant is this article?
+        $relevance = $article->getRelevance($keyword);
+        if ($relevance->relevance == 0)
+            continue;
 
         // add the article to the holder, to show later
-        $found->addPage($page);
+        $found[] = FaZend_StdObject::create()
+            ->set('title', $page->title)
+            ->set('href', $page->href)
+            ->set('relevance', $relevance->relevance)
+            ->set('quote', $relevance->quote);
 
     }
+
+    usort($found, create_function('$a, $b', 'return $a->relevance < $b->relevance;'));
+
 ?>
 
-<? foreach (array_slice($found->getPages(), 0, 20) as $page): ?>
+<? foreach (array_slice($found, 0, 10) as $page): ?>
 
     <p>
-        <a title="<?=$page->title?>" href="<?=$page->href?>"><?=$page->title?></a> 
-        [relevance: <?=$page->relevance?>%]<br/>
-        ...<?=$page->quote?>...
+        <a title="<?=$this->escape($page->title)?>" href="<?=$page->href?>"><?=$this->escape($page->title)?></a><br/> 
+        ...<?=preg_replace('/(' . preg_quote($keyword). ')/i', '<b>${1}</b>', $this->escape($page->quote))?>...
     </p>
 
 <? endforeach; ?>
