--- a/php/src/application/pages/_access.phtml
+++ b/php/src/application/pages/_access.phtml
@@ -1,11 +1,7 @@
 
 [projects]
-PM/* = rw
-FinDirector = r
-PMO = r
+yegor256@yahoo.com = r
 
 [wobots]
-Director = rw
+yegor256@yahoo.com = rw
 
-[Finance]
-FinDirector = rw
