--- a/php/src/application/views/scripts/panel/restrict.phtml
+++ b/php/src/application/views/scripts/panel/restrict.phtml
@@ -1,5 +1,14 @@
 <h1>Access restricted</h1>
 
+<p class="flash">
+    <? if ($this->message): ?>
+        <?=$this->message?>
+    <? else: ?>
+        Unknown reason
+    <? endif; ?>
+</p>
+
 <p>To access documents, files, projects and other online materials
-in our site you have to be logged in. Try to use the form in the
-top right corner of this page to log in.</p>
+in our site you have to be logged in and have enough access permissions.
+Try to use the form in the top right corner of this page to log in.</p>
+
